# trx-vanity

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-icons.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/fonts/MiSans/: fonts.css
src/composables/: use_toast.ts  use_wallet.ts
