[package]
name = "trx-vanity"
version = "0.1.0"
description = "TRX vanity wallet generator"
authors = ["VCLOUD"]
edition = "2021"

[lib]
name = "trx_vanity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tiny-keccak = { version = "2", features = ["keccak"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
